# market_chat_bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  create_admin.py  data_set.xlsx  database.py  deploy.sh  docker-compose.yml  final_rag_dataset.xlsx  git_master.py  main.py  ocr_extract.py  push_to_git.py  requirements.dev.txt  requirements.txt  run_colab.py  upload_data.py  vercel.json  verify_rag.py
IRYM_sdk/: GUIDE.ar.md  GUIDE.md  IRYM.py  Makefile  PIPELINES.ar.md  PIPELINES.md  PUBLISH.md  README.ar.md  README.md  TRAINING.ar.md  TRAINING.md  __init__.py  install.sh  pyproject.toml  requirements.txt
IRYM_sdk/audio/: __init__.py  base.py  local.py  openai.py
IRYM_sdk/cache/: __init__.py  base.py  redis_cache.py
IRYM_sdk/core/: __init__.py  base.py  config.py  container.py  exceptions.py  lifecycle.py  utils.py
IRYM_sdk/db/: __init__.py  base.py  sqlalchemy.py
IRYM_sdk/framework/: chatbot.py  security.py
IRYM_sdk/insight/: __init__.py  base.py  composer.py  engine.py  optimizer.py  retriever.py  vlm_pipeline.py
IRYM_sdk/llm/: __init__.py  base.py  local.py  openai.py  vlm_local.py  vlm_openai.py
IRYM_sdk/memory/: __init__.py  base.py  history.py  manager.py  semantic.py
IRYM_sdk/observability/: __init__.py  logger.py  tracing.py
IRYM_sdk/queue/: __init__.py  base.py  celery_queue.py
IRYM_sdk/rag/: __init__.py  pipeline.py
IRYM_sdk/tests/: verify_framework_chatbot.py  verify_github.py  verify_memory.py  verify_observability.py  verify_rag.py  verify_rag_expansion.py  verify_security.py  verify_training.py  verify_vlm.py
IRYM_sdk/training/: base.py  local_finetuner.py  openai_finetuner.py
(+33 files in other folders)
